force-app/main/default/objects/Call_Completed_Event__e/Call_Completed_Event__e.object-meta.xml
<CustomObject>
    <label>Call Completed Event</label>
    <pluralLabel>Call Completed Events</pluralLabel>
</CustomObject>