force-app/main/default/objects/Call_Completed_Event__e/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <description>Account display name for the LWC overlay</description>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>