force-app/main/default/objects/Call_Completed_Event__e/fields/Activity_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_Id__c</fullName>
    <description>Talkdesk Activity record ID</description>
    <label>Activity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>