force-app/main/default/objects/Call_Completed_Event__e/fields/Call_Notes__c.field-meta.xml
<CustomField>
    <fullName>Call_Notes__c</fullName>
    <description>Pre-populated call notes from talkdesk__Notes__c</description>
    <label>Call Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>