force-app/main/default/objects/Call_Completed_Event__e/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <description>Disposition label from talkdesk__DispositionCode__r.talkdesk__Label__c</description>
    <label>Disposition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>