force-app/main/default/objects/Call_Completed_Event__e/fields/Opp_Name__c.field-meta.xml
<CustomField>
    <fullName>Opp_Name__c</fullName>
    <description>Opportunity display name for the LWC overlay</description>
    <label>Opp Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>