force-app/main/default/objects/Call_Completed_Event__e/fields/Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Id__c</fullName>
    <description>Opportunity ID linked to the completed call</description>
    <label>Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>