force-app/main/default/objects/Call_Completed_Event__e/fields/Sales_Rep_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Id__c</fullName>
    <description>Opportunity OwnerId — LWC filters events by current user</description>
    <label>Sales Rep Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>