force-app/main/default/objects/Call_Completed_Event__e/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <description>The Talkdesk Activity ID or AI_Call_Note__c ID that triggered the event</description>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>