force-app/main/default/objects/Call_Completed_Event__e/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>Discriminator for the event source: Talkdesk or AI_Call_Note</description>
    <label>Source Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>