force-app/main/default/objects/Call_Completed_Event__e/fields/Talk_Time_Sec__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time_Sec__c</fullName>
    <description>Total talk time in seconds from talkdesk__Total_Talk_Time_sec__c</description>
    <label>Talk Time Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>